tests/fixtures/fail/algebraic_effect_never_abort_resume.sc
let Abort = effect {
  let stop(value: i32): Never
}

let main(): i32 = {
  Abort.handle stop { (value, resume) -> resume(value) } action {
    Abort.stop(42)
  }
}
